deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa-interop-ns
  name: srvapiregister
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srvapiregister
  template:
    metadata:
      labels:
        app: srvapiregister
    spec:
      serviceAccountName: sasrvapiregister
      automountServiceAccountToken: false
      containers:
        - name: qa-interop-srvapiregister
          image: 183295434367.dkr.ecr.us-east-1.amazonaws.com/qa/crps-srvapiregister:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
