service-aws.yml
apiVersion: v1
kind: Service
metadata:
  name: srvapiregisterv2
  namespace: qa-interop-ns
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: srvapiregisterv2
