service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: qa-interop-ns
  name: srvapiregister
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    app: srvapiregister
