ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srvapiregister
  namespace: qa-interop-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=qa,IteraProject=BANCO_UNION_11907_CLOUD_2024,Project=interoperabilidad
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-09e8ccd1fc64804ca
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:183295434367:certificate/2b62e334-4723-4f9a-adc7-b005bd8e45ec
    alb.ingress.kubernetes.io/group.name: alb-interop-nonmonetary
    alb.ingress.kubernetes.io/healthcheck-path: /SrvAPIRegister/healthy
spec:
  ingressClassName: alb
  rules:
  - host: srvapiregisterqa.bancounion.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srvapiregister
            port:
              number: 8080
